Version 0.0.3 (not yet released):
- CVL: Add cvl_sort_array_float()
- CVL: Add missing const qualifier to prototype of cvl_field_write_raw().
- CVL: cvl_getopt(): Added the new option type CVL_OPTION_INFO for options that
  request information, like --help and --version.
- cvtool: Improve crash messages.
- cvtool: Adjust --version and --help output to more closely match the latest 
  GNU standards.
- CVL: Export command line handling function cvl_getopt() and support data 
  types. This code was in cvtool before, but is now accessible for other 
  programs.
- CVL: Fix cvl_convole() and cvl_convolve3d(): the order of dim_x, dim_y, and 
  dim_t was changed.
- cvtool: Added a crash handler to cvtool. It prints a backtrace on SIGILL, 
  SIGFPE, and SIGSEGV. The crash handler is only available for systems with 
  POSIX signals. A backtrace is only printed on GNU/Linux systems.
- CVL: Export cvl_assert() and cvl_print_backtrace().
- CVL: Added convenience funtions cvl_field_get(i|f)*() for fields that store 
  only floats or ints.

Version 0.0.2:
- Gnulib update.
- In cvl/Makefile.am and cvtool/Makefile.am: use $(top_builddir) where
  appropriate.
- Replace '#ifdef _WIN32' with '#ifdef W32_NATIVE', where W32_NATIVE is defined
  in config.h if the following is true:
  '#if (defined _WIN32 || defined __WIN32__) && !defined __CYGWIN__'.
  The reason is that Cygwin defines _WIN32 nowadays, but we want the UNIX API
  on that platform.
- CVL: Improve error messages when reading NetPBM frames.
- CVL: Export CVL_VERSION, needed by cvl.m4.
- CVL: Renamed many cvl_frame_* functions to cvl_*.
- cvtool: Added the sedt command as an interface to cvl_sedt() and cvl_sedt3d().
- CVL: Added cvl_sedt() and cvl_sedt3d() to compute the Squared Euclidean 
  Distance Transform in O(n).
- CVL: Fixed prototype of functions that get an array of frames.
- CVL: Added functions to report the size of fields and frames.
- CVL: Print a backtrace when cvl_assert() fails (only on glibc systems).