@@ -28,6 +28,8 @@
 #include "cvl_frame.h"
 
 const char *cvl_check_version(const char *req_version);
+void cvl_diffstat(const cvl_frame_t *f1, const cvl_frame_t *f2, 
+	cvl_frame_t **diff, uint8_t *min, uint8_t *max, uint8_t *med, double *avg, double *dev);
 cvl_frame_t *cvl_diff(const cvl_frame_t *f1, const cvl_frame_t *f2);
 cvl_field_t *cvl_sedt(const cvl_frame_t *frame);
 cvl_field_t **cvl_sedt3d(cvl_frame_t * const *frames, int depth);
