@@ -1,4 +1,8 @@
 Version 0.0.3 (not yet released):
+- cvtool: Enhanced diff command. It can now use cvl_diffstat() and print the
+  resulting statistics.
+- CVL: Added new function cvl_diffstat() to compute simple statistics for the 
+  differences between two frames.
 - CVL: Add cvl_sort_array_float()
 - CVL: Add missing const qualifier to prototype of cvl_field_write_raw().
 - CVL: cvl_getopt(): Added the new option type CVL_OPTION_INFO for options that
